# ddgen

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
bit-lang/: Cargo.toml  README.md
bit-lang/docs/: bit-lang.ebnf  bit-lang_extended.ebnf  lang-spec.md
bit-lang/src/: bit_spec.rs  lib.rs  parser.rs
common/: Cargo.toml
common/src/: bits.rs  command.rs  deserialize.rs  error.rs  lib.rs  request.rs  response.rs  serialize.rs  transmit.rs
common/src/tests/: mod.rs  tests_bit_spec_impl.rs  tests_struct_deserialization.rs  tests_struct_se_de.rs  tests_struct_se_iter.rs
common/tests/: test_polled_send.rs  test_send_with_provider.rs  tests_bit_spec_impl.rs  tests_send.rs  tests_struct_se_de.rs  tests_struct_se_iter.rs
definitions/: bits_fields_types.toml  literals.toml  si468x.toml  si468x_bit_language.toml  test_device.toml
docs/: used_commands.md
examples/si468x-pac/: Cargo.toml
examples/si468x-pac/src/: command.rs  dab_set_freq_list.rs  error.rs  example-serialization.rs  get_sys_state.rs  lib.rs  types.rs
examples/si468x-pac/src/tests/: mod.rs
generator/: Cargo.toml  rust-toolchain.toml
generator/src/: TODO.md  access.rs  bit_range.rs  cargo_gen.rs  command.rs  common_structure.rs  definition.rs  doc_comment.rs  error_reporting.rs  field.rs  flow_control.rs  lib.rs  main.rs  members.rs  output.rs  providers.rs
generator/src/naming/: command_name.rs  common_structure_name.rs  mod.rs  request_struct_name.rs  response_struct_name.rs
generator/tests/: generation_tests.rs  integration_tests.rs
generator/tests/resources/: bft_test_command.rs  bits_fields_types.toml  simple.toml  test_command.rs
generator/tests/utilities/: mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
