[package]
name    = "common"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow       = "1.0.80"
clap         = { version = "4.5.2", features = ["derive"] }
convert_case = "0.6.0"
crossterm    = "0.28.1"
genco        = "0.17.8"
semver       = { version = "1.0.22", features = ["serde"] }
serde        = { version = "1.0.197", features = ["derive"] }
toml         = { version = "0.8.10", features = ["parse"] }
bit-lang     = { path = "../bit-lang" }
embedded-hal = "1.0.0"


[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["eh1"] }
