[package]
name    = "generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generator"
path = "src/main.rs"

[dependencies]
anyhow       = "1.0.80"
clap         = { version = "4.5.2", features = ["derive"] }
convert_case = "0.6.0"
crossterm    = "0.27.0"
genco        = "0.17.8"
semver       = { version = "1.0.22", features = ["serde"] }
serde        = { version = "1.0.197", features = ["derive"] }
toml         = { version = "0.8.10", features = ["parse"] }
bit-lang     = { path = "../bit-lang" }

[dev-dependencies]
tempfile = "3.10.1"
xshell   = "0.2.6"
