[package]
name    = "ddgen"
version = "0.2.0"
edition = "2021"
license = "MIT"

[lib]
name = "generate"
path = "src/lib.rs"

[[bin]]
name = "ddgen"
path = "src/main.rs"

[dependencies]
anyhow       = "1.0.80"
clap         = { version = "4.5.2", features = ["derive"] }
convert_case = "0.6.0"
crossterm    = "0.27.0"
genco        = "0.17.9"
semver       = { version = "1.0.22", features = ["serde"] }
serde        = { version = "1.0.197", features = ["derive"] }
toml         = { version = "0.8.10", features = ["parse"] }
bit-lang     = { path = "../bit-lang" }
indexmap     = { version = "2.2.6", features = ["std", "serde"] }

[dev-dependencies]
tempfile          = "3.10.1"
pretty_assertions = "1.4.0"
