[package]
name    = "xtask"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow     = "1.0.38"
crossterm  = "0.27.0"
xshell     = "0.1.9"
cargo_toml = "0.17.2"
toml       = "0.8.8"
serde      = { version = "1.0", features = ["derive"] }
