[package]
name    = "si468x-pac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "1.0.0" }
embedded-hal-nb = "1.0.0"
embedded-hal-mock = { version = "0.10.0", features = [
    "eh1",
] } # uses embedded-hal 1.0.0
defmt = "0.3.5" # Required?
